--- a/FamilyBudget/Views/Home/Index.cshtml
+++ b/FamilyBudget/Views/Home/Index.cshtml
@@ -1,8 +1,17 @@
-﻿@{
+﻿@model IEnumerable<FamilyBudget.Models.Project>
+
+@{
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<h1>Index</h1>
+
+<div class="list-group">
+    @foreach (var item in Model)
+    {
+    <a asp-area="" asp-controller="Projects"  asp-action="Details" asp-route-id="@item.Id" 
+       class="list-group-item list-group-item-action">
+        @Html.DisplayFor(modelItem => item.Name)
+    </a>
+    }
 </div>
