--- a/FamilyBudget/Views/Home/Index.cshtml
+++ b/FamilyBudget/Views/Home/Index.cshtml
@@ -13,20 +13,16 @@
 <div class="list-group">
     @foreach (var item in Model)
     {
-        <div class="list-group-item d-flex justify-content-between align-items-center">
-            <a asp-area="" asp-controller="Projects" asp-action="Details" asp-route-id="@item.Id"
-               class="p-2 flex-grow list-group-item-action">
+        <div class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
+            <a class="p-2 projectListItem list-group-item-action flex-grow-1"
+               asp-area="" asp-controller="Projects" asp-action="Details" asp-route-id="@item.Id">
                 @Html.DisplayFor(modelItem => item.Name)
             </a>
 
-            <a asp-area="" asp-controller="Modal" asp-action="ProjectDelete" asp-route-id="@item.Id" class="p-2 ml-3 projectDelete">
-                <span class="badge">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="gray" class="bi bi-x-lg" viewBox="0 0 16 16">
-                        <path fill-rule="evenodd" d="M13.854 2.146a.5.5 0 0 1 0 .708l-11 11a.5.5 0 0 1-.708-.708l11-11a.5.5 0 0 1 .708 0Z"></path>
-                        <path fill-rule="evenodd" d="M2.146 2.146a.5.5 0 0 0 0 .708l11 11a.5.5 0 0 0 .708-.708l-11-11a.5.5 0 0 0-.708 0Z"></path>
-                    </svg>
-                </span>
+            <a asp-area="" asp-controller="Modal" asp-action="ProjectDelete" asp-route-id="@item.Id" class="projectDelete p-2 ml-3 badge">
+                <img src="~/lib/bootstrap/dist/icons/x-lg.svg">
             </a>
+        
         </div>
     }
 </div>
@@ -34,7 +30,6 @@
 @section scripts
 {
     <script type="text/javascript">
-
         $(function () {
             $.ajaxSetup({ cache: false });
             $(".projectDelete").click(function (e) {
