--- a/FamilyBudget/Views/Modal/ProjectDelete.cshtml
+++ b/FamilyBudget/Views/Modal/ProjectDelete.cshtml
@@ -1,15 +1,63 @@
 ﻿@model FamilyBudget.Models.Project
 
+@{
+    ViewData["Title"] = "ProjectDelete";
+    
+}
+
 <div class="modal-content">
-    <div class="modal-header">
-        <h5 class="modal-title">Delete</h5>
+    <div class="modal-header ">
+        <h3 class="modal-title ">Are you sure you want to delete this project?</h3>
         <button class="btn btn-close" data-dismiss="modal" aria-label="Close">
             <img src="~/lib/bootstrap/dist/icons/x-lg.svg">
         </button>
     </div>
 
-    <div class="modal-body">
-        <p class="modal-title" id="deleteModalLabel">Are you sure you want to delete @Html.DisplayFor(model => model.Name)?</p>
+    <div class="modal-body container-fluid">
+        <dl class="row">
+            <dt class="col-sm-4">
+                @Html.DisplayNameFor(model => model.Name):
+            </dt>
+            <dd class="col-sm-8">
+                @Html.DisplayFor(model => model.Name)
+            </dd>
+            <dt class="col-sm-4">
+                @Html.DisplayNameFor(model => model.Owner.UserName):
+            </dt>
+            <dd class="col-sm-8">
+                @Html.DisplayFor(model => model.Owner.UserName)
+            </dd>
+            <dt class="col-sm-4">
+                Family members count:
+            </dt>
+            <dd class="col-sm-8">
+                @ViewBag.membersCount
+            </dd>
+            <dt class="col-sm-4">
+                Incomes count:
+            </dt>
+            <dd class="col-sm-8">
+                @ViewBag.incomesCount
+            </dd>
+            <dt class="col-sm-4">
+                Charges count:
+            </dt>
+            <dd class="col-sm-8">
+                @ViewBag.chargesCount
+            </dd>
+            <dt class="col-sm-4">
+                @Html.DisplayNameFor(model => model.CreateTime)
+            </dt>
+            <dd class="col-sm-8">
+                @Html.DisplayFor(model => model.CreateTime)
+            </dd>
+            <dt class="col-sm-4">
+                @Html.DisplayNameFor(model => model.UpdateTime)
+            </dt>
+            <dd class="col-sm-8">
+                @Html.DisplayFor(model => model.UpdateTime)
+            </dd>
+        </dl>
     </div>
 
     <div class="modal-footer">
