--- a/FamilyBudget/Views/Home/Index.cshtml
+++ b/FamilyBudget/Views/Home/Index.cshtml
@@ -13,16 +13,14 @@
 <div class="list-group">
     @foreach (var item in Model)
     {
-        <div class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
-            <a class="p-2 projectListItem list-group-item-action flex-grow-1"
-               asp-area="" asp-controller="Projects" asp-action="Details" asp-route-id="@item.Id">
+        <a class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
+           asp-controller="Projects" asp-action="Details" asp-route-id="@item.Id">
+            <span class="p-2 projectListItem list-group-item-action flex-grow-1">
                 @Html.DisplayFor(modelItem => item.Name)
-            </a>
+            </span>
 
-            <a asp-area="" asp-controller="Modal" asp-action="ProjectDelete" asp-route-id="@item.Id" class="projectDelete p-2 ml-3 badge">
-                <img src="~/lib/bootstrap/dist/icons/x-lg.svg">
-            </a>       
-        </div>
+            <i id="@item.Id" class="bi bi-x-lg projectDelete"></i>
+        </a>
     }
 </div>
 
@@ -32,9 +30,8 @@
         $(function () {
             $.ajaxSetup({ cache: false });
             $(".projectDelete").click(function (e) {
-
                 e.preventDefault();
-                $.get(this.href, function (data) {
+                $.get("Modal/ProjectDelete/" + this.id, function (data) {
                     $('#projectDeleteDialogContent').html(data);
                     $('#projectDeleteModal').modal('show');
                 });
