--- a/FamilyBudget/Views/Home/Details.cshtml
+++ b/FamilyBudget/Views/Home/Details.cshtml
@@ -6,116 +6,131 @@
 
 <h1>Details</h1>
 
-<form method="get" class="pt-1 pb-3">
-    <div class="form-inline">
-        <input name="category" placeholder="Category"/>
+<form class="pt-1 pb-3">
+        <div class="form-inline">
+            <input type="text" class="form-control col-6 ml-auto" name="category" placeholder="Category"
+                   autocomplete="off" data-categories='@Url.Action("GetCategories", "Categories")' />
 
-        <select type="submit" class="form-control col-sm-1 ml-2 mr-auto" name="finType"
-                asp-for="@Model.FilterViewModel.SelectedFinType"
-                asp-items="@Model.FilterViewModel.FinTypes"
-                onchange="this.form.submit()"></select>
-    </div>
-</form>
-@if (!Model.isEmpty)
-{
-    <table class="table">
-        <thead>
-            <tr>
-                <th>
-                    <a class="btn btn-sm btn-light"
-                       asp-action="Details"
-                       asp-route-sortorder="@(Model.SortViewModel.CategorySort)"
-                       asp-route-category="@(Model.FilterViewModel.SelectedCategory)">
-                        Category
-                        <i class="fa fa-fw fa-sort"></i>
-                    </a>
-                </th>
-                <th>
-                    <a class="btn btn-sm btn-light"
-                       asp-action="Details"
-                       asp-route-sortorder="@(Model.SortViewModel.ValueSort)">
-                        Value
-                        <i class="fa fa-fw fa-sort"></i>
-                    </a>
-                </th>
-                <th>
-                    <a class="btn btn-sm btn-light"
-                       asp-action="Details"
-                       asp-route-sortorder="@(Model.SortViewModel.CreateTimeSort)">
-                        CreateTime
-                        <i class="fa fa-fw fa-sort"></i>
-                    </a>
-                </th>
-                <th>
-                    <a class="btn btn-sm btn-light"
-                       asp-action="Details"
-                       asp-route-sortorder="@(Model.SortViewModel.FinTypeSort)"
-                       asp-route-fintype="@(Model.FilterViewModel.SelectedFinType)">
-                        FinType
-                        <i class="fa fa-fw fa-sort"></i>
-                    </a>
-                </th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (FinOperation fo in Model.finOperations)
-            {
+            <select type="submit" class="form-control col-sm-1 ml-2 mr-auto" name="finType"
+                    asp-for="@Model.FilterViewModel.SelectedFinType"
+                    asp-items="@Model.FilterViewModel.FinTypes"
+                    onchange="this.form.submit()"></select>
+        </div>
+    </form>
+
+    @if (!Model.isEmpty)
+    {
+        <table class="table">
+            <thead>
                 <tr>
-                    <td class="col-3">@fo.Category.Name</td>
-                    <td class="col-3">@fo.Value</td>
-                    <td class="col-3">
-                        @if (@fo.CreateTime.Date.Day == DateTime.Now.Day)
-                        {
-                            <label>Сегодня</label>
-                        }
-                        else if (@fo.CreateTime.Date.Day == DateTime.Today.AddDays(-1).Day)
-                        {
-                            <label>
-                                Вчера
-                            </label>
-                        }
-                        else if (@fo.CreateTime.Date.Year == DateTime.Now.Year)
-                        {
-                            <label>
-                                @fo.CreateTime.ToString("d MMMM")
-                            </label>
-                        }
-                        else
-                        {
-                            <label>
-                                @fo.CreateTime.ToString("d MMMM yyyy")
-                            </label>
-                        }
-                    </td>
-                    <td class="col-3">@fo.FinType</td>
+                    <th>
+                        <a class="btn btn-sm btn-light"
+                           asp-action="Details"
+                           asp-route-sortorder="@(Model.SortViewModel.CategorySort)"
+                           asp-route-category="@(Model.FilterViewModel.SelectedCategory)">
+                            Category
+                            <i class="fa fa-fw fa-sort"></i>
+                        </a>
+                    </th>
+                    <th>
+                        <a class="btn btn-sm btn-light"
+                           asp-action="Details"
+                           asp-route-sortorder="@(Model.SortViewModel.ValueSort)">
+                            Value
+                            <i class="fa fa-fw fa-sort"></i>
+                        </a>
+                    </th>
+                    <th>
+                        <a class="btn btn-sm btn-light"
+                           asp-action="Details"
+                           asp-route-sortorder="@(Model.SortViewModel.CreateTimeSort)">
+                            CreateTime
+                            <i class="fa fa-fw fa-sort"></i>
+                        </a>
+                    </th>
+                    <th>
+                        <a class="btn btn-sm btn-light"
+                           asp-action="Details"
+                           asp-route-sortorder="@(Model.SortViewModel.FinTypeSort)"
+                           asp-route-fintype="@(Model.FilterViewModel.SelectedFinType)">
+                            FinType
+                            <i class="fa fa-fw fa-sort"></i>
+                        </a>
+                    </th>
                 </tr>
-            }
-        </tbody>
-    </table>
+            </thead>
+            <tbody>
+                @foreach (FinOperation fo in Model.finOperations)
+                {
+                    <tr>
+                        <td class="col-3">@fo.Category.Name</td>
+                        <td class="col-3">@fo.Value</td>
+                        <td class="col-3">
+                            @if (@fo.CreateTime.Date.Day == DateTime.Now.Day)
+                            {
+                                <label>Сегодня</label>
+                            }
+                            else if (@fo.CreateTime.Date.Day == DateTime.Today.AddDays(-1).Day)
+                            {
+                                <label>
+                                    Вчера
+                                </label>
+                            }
+                            else if (@fo.CreateTime.Date.Year == DateTime.Now.Year)
+                            {
+                                <label>
+                                    @fo.CreateTime.ToString("d MMMM")
+                                </label>
+                            }
+                            else
+                            {
+                                <label>
+                                    @fo.CreateTime.ToString("d MMMM yyyy")
+                                </label>
+                            }
+                        </td>
+                        <td class="col-3">@fo.FinType</td>
+                    </tr>
+                }
+            </tbody>
+        </table>
 
 
-    <ul class="pagination justify-content-center">
-        <li class="page-item @(!Model.PageViewModel.HasPreviousPage ? "disabled" : "")">
-            <a asp-action="Details"
-               asp-route-id="@(Model.FilterViewModel.SelectedProject)"
-               asp-route-page="@(Model.PageViewModel.PageNumber - 1)"
-               asp-route-sortorder="@(Model.SortViewModel.Current)"
-               class="page-link">
-                Previous
-            </a>
-        </li>
-        <li class="page-item @(!Model.PageViewModel.HasNextPage ? "disabled" : "")">
-            <a asp-action="Details"
-               asp-route-id="@(Model.FilterViewModel.SelectedProject)"
-               asp-route-page="@(Model.PageViewModel.PageNumber + 1)"
-               asp-route-sortorder="@(Model.SortViewModel.Current)"
-               class="page-link">
-                Next
-            </a>
-        </li>
-    </ul>
-}
-else
+        <ul class="pagination justify-content-center">
+            <li class="page-item @(!Model.PageViewModel.HasPreviousPage ? "disabled" : "")">
+                <a asp-action="Details"
+                   asp-route-id="@(Model.FilterViewModel.SelectedProject)"
+                   asp-route-page="@(Model.PageViewModel.PageNumber - 1)"
+                   asp-route-sortorder="@(Model.SortViewModel.Current)"
+                   class="page-link">
+                    Previous
+                </a>
+            </li>
+            <li class="page-item @(!Model.PageViewModel.HasNextPage ? "disabled" : "")">
+                <a asp-action="Details"
+                   asp-route-id="@(Model.FilterViewModel.SelectedProject)"
+                   asp-route-page="@(Model.PageViewModel.PageNumber + 1)"
+                   asp-route-sortorder="@(Model.SortViewModel.Current)"
+                   class="page-link">
+                    Next
+                </a>
+            </li>
+        </ul>
+    }
+    else
+    {
+        <h4 class="text-center p-5">No FinOperation found</h4>
+    }
+
+
+@section scripts
 {
-    <h4 class="text-center p-5">No FinOperation found</h4>
+    <script type="text/javascript">
+            $("[data-categories]").each(function () {
+                var target = $(this);
+                target.autocomplete({ source: target.attr("data-categories") });
+            });
+    </script>
 }
+
+
