--- a/FamilyBudget/Views/Home/Details.cshtml
+++ b/FamilyBudget/Views/Home/Details.cshtml
@@ -29,7 +29,7 @@
                            asp-route-sortorder="@(Model.SortViewModel.CategorySort)"
                            asp-route-category="@(Model.FilterViewModel.SelectedCategory)">
                             Category
-                            <i class="fa fa-fw fa-sort fa-sort"></i>
+                            <i class="fa fa-fw fa-sort"></i>
                         </a>
                     </th>
                     <th>
